--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Mingdong Li (Raymond)"
-description              : "Ph.D. candidate @ HKUST, Email: mlidr@connect.ust.hk"
-repository               : "mingdong-li/mingdong-li.github.io"
+title                    : "Cong Li(Raphael Lee)"
+description              : "B.S. @ USTC, Email: lcbeidouzn@mail.ustc.edu.cn"
+repository               : "JinHui2022/JinHui2022.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Mingdong Li"
+  name             : "Cong Li"
   avatar           : "./images/profile4.jpg"
   bio              : # "HKUST"
-  location         : "Hong Kong, China"
+  location         : "Anhui, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=BhYcNg0AAAAJ&hl=en"
-  email            : "mlidr@connect.ust.hk"
+  googlescholar    : # "https://scholar.google.com/citations?user=BhYcNg0AAAAJ&hl=en"
+  email            : "lcbeidouzn@mail.ustc.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "mingdong-li"
+  github           : "JinHui2022"
   google_plus      :
   keybase          :
   instagram        :
